feat: UI-kit и верстка шапки

--- a/src/scss/abstracts/variables/_color.scss
+++ b/src/scss/abstracts/variables/_color.scss
@@ -1,8 +1,14 @@
 // Цветовая палитра блоков
 $palette-white: #ffffff;
+$palette-lightgray: #d9d9d9;
+$palette-lightblue: #c1d1d9;
+$palette-blue: #07628f;
+$palette-darkblue: #074766;
 $palette-black: #000000;
 
 // Цветовая палитра текста
 $color-text__primary: #000000;
 $color-text__black: #000000;
+$color-text__darkgray: #333333;
 $color-text__white: #ffffff;
+$color-text__blue: #07628f;
