--- a/src/scss/abstracts/variables/_typography.scss
+++ b/src/scss/abstracts/variables/_typography.scss
@@ -10,15 +10,16 @@ $weight-ExtraBold: 800;
 $weight-Black: 900;
 
 // Размеры шрифта
-$font-size__title--large: 64px;
+$font-size__title--large: 58px;
 $font-size__title--medium: 48px;
-$font-size__title--small: 36px;
+$font-size__title--small: 32px;
 
-$font-size__text--large: 24px;
+$font-size__text--large: 21px;
 $font-size__text--big: 18px;
 $font-size__text--regular: 16px;
 $font-size__text--small: 14px;
 
 // Межстрочные расстояния
-$line-height--primary: 1.5;
-$line-height--secondary: 1.25;
+$line-height--primary: 1.25;
+$line-height--secondary: 1.15;
+$line-height--tall: 1.5;
