--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -14,10 +14,14 @@ html {
 }
 
 body {
-  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  overflow-x: clip;
+
+  min-height: 100vh;
+
   font-size: 1rem;
 }
-
 /**
  * Наследуем всем элементам свойство border-box от родителя (html)
  * Так как селектор * имеет 0 приоритет, он не переопределяет стили html
