--- a/src/scss/core/bootstrap/_variables.scss
+++ b/src/scss/core/bootstrap/_variables.scss
@@ -68,7 +68,7 @@ $position-values: (
 
 // Links
 $stretched-link-pseudo-element: after !default;
-$stretched-link-z-index: 1 !default;
+$stretched-link-z-index: 10 !default;
 
 // Paragraphs
 //
@@ -87,8 +87,7 @@ $grid-breakpoints: (
   sm: 576px,
   md: 768px,
   lg: 992px,
-  xl: 1200px,
-  xxl: 1400px,
+  xl: 1140px,
 ) !default;
 // scss-docs-end grid-breakpoints
 
@@ -104,8 +103,7 @@ $container-max-widths: (
   sm: 540px,
   md: 720px,
   lg: 960px,
-  xl: 1140px,
-  xxl: 1320px,
+  xl: 1170px,
 ) !default;
 // scss-docs-end container-max-widths
 
@@ -116,7 +114,7 @@ $container-max-widths: (
 // Set the number of columns and specify the width of the gutters.
 
 $grid-columns: 12 !default;
-$grid-gutter-width: 1.5rem !default;
+$grid-gutter-width: 32px !default;
 $grid-row-columns: 6 !default;
 
 $gutters: $spacers !default;
