--- a/src/scss/layout/common/_navigation.scss
+++ b/src/scss/layout/common/_navigation.scss
@@ -4,11 +4,124 @@
 
 .nav {
   &__list {
+    display: flex;
+
+    &--dotted {
+      .nav__link {
+        display: inline-flex;
+        align-items: center;
+
+        &::before {
+          content: "";
+          width: 12px;
+          height: 12px;
+
+          margin-right: 8px;
+
+          border: 2px solid rgba($color: $palette-white, $alpha: 0.5);
+          border-radius: 50%;
+        }
+      }
+    }
   }
 
   &__item {
   }
 
   &__link {
+  }
+
+  &--header {
+    .nav__list {
+      align-items: center;
+      justify-content: space-between;
+
+      height: 75px;
+    }
+
+    .nav__item {
+      position: relative;
+      flex: 1 0 auto;
+
+      height: 100%;
+
+      text-align: center;
+      transition: $transition ease;
+
+      @media (hover: hover) {
+        &:hover {
+          background-color: $palette-blue;
+        }
+      }
+    }
+
+    .nav__link {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      height: 100%;
+
+      color: $color-text__white;
+      font-size: $font-size__text--big;
+    }
+  }
+
+  // &--mobile {
+  //   .nav__list {
+  //     flex-direction: column;
+  //   }
+
+  //   .nav__item {
+  //     &:not(:last-child) {
+  //       margin-bottom: 2px;
+  //     }
+  //   }
+
+  //   .nav__link {
+  //     display: block;
+  //     padding: 6px 20px;
+  //     background-color: $palette-gray;
+  //     color: $color-text__white;
+  //   }
+  // }
+
+  &--footer {
+    @include breakpoint($breakpoint-tablet--large) {
+      justify-content: flex-start;
+    }
+
+    display: flex;
+    justify-content: center;
+
+    .nav__list {
+      display: inline-flex;
+      flex-direction: column;
+    }
+
+    .nav__item {
+      &:not(:last-child) {
+        @include breakpoint($breakpoint-tablet) {
+          margin-bottom: 12px;
+        }
+
+        @include breakpoint($breakpoint-mobile--large) {
+          margin-bottom: 8px;
+        }
+
+        margin-bottom: 16px;
+      }
+    }
+
+    .nav__link {
+      @include breakpoint($breakpoint-tablet) {
+        font-size: $font-size__text--small;
+      }
+
+      display: inline-flex;
+      align-items: center;
+
+      color: $color-text__white;
+    }
   }
 }
