feat: верстка главного экрана

--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -2,7 +2,11 @@
 // В этом файле подключаются все шрифты через font-face, если таковые есть
 // -----------------------------------------------------------------------------
 
-@include font-face("Roboto", "../fonts/Roboto/Roboto-Light", 300);
-@include font-face("Roboto", "../fonts/Roboto/Roboto-Regular", 400);
-@include font-face("Roboto", "../fonts/Roboto/Roboto-Medium", 500);
-@include font-face("Roboto", "../fonts/Roboto/Roboto-Bold", 700);
+@include font-face("Montserrat", "../fonts/Montserrat/Montserrat-Regular", 400);
+@include font-face("Montserrat", "../fonts/Montserrat/Montserrat-Medium", 500);
+@include font-face("Montserrat", "../fonts/Montserrat/Montserrat-Bold", 700);
+
+@include font-face("NotoSans", "../fonts/NotoSans/NotoSans-Regular", 400);
+@include font-face("NotoSans", "../fonts/NotoSans/NotoSans-SemiBold", 600);
+@include font-face("NotoSans", "../fonts/NotoSans/NotoSans-Bold", 700);
+@include font-face("NotoSans", "../fonts/NotoSans/NotoSans-ExtraBold", 800);
