--- a/src/scss/components/button/_button.scss
+++ b/src/scss/components/button/_button.scss
@@ -1,9 +1,14 @@
 .button {
+  padding: 18px 32px;
+
   border: none;
-  border-radius: $border-radius--button;
+  border-radius: 20px;
   outline: none;
 
   background-color: transparent;
+
+  font-weight: $weight-Bold;
+  text-shadow: 0 4px 4px rgba(#000000, 0.25);
 
   white-space: nowrap;
   cursor: pointer;
