--- a/src/scss/layout/common/_navigation.scss
+++ b/src/scss/layout/common/_navigation.scss
@@ -63,7 +63,10 @@
       height: 100%;
 
       color: $color-text__white;
+
+      font-weight: $weight-Medium;
       font-size: $font-size__text--big;
+      font-family: Montserrat, sans-serif;
     }
   }
 
