--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -2,7 +2,76 @@
 
 <!-- Основной контент -->
 <main id="home">
+  <section id="hero" class="section">
+    <div class="container">
+      <div class="hero">
+        <h2 class="hero__subtitle font-secondary">Одно из крупнейших на Юге России</h2>
+        <h1 class="hero__title">
+          Производство
+          <br>
+          стеклопакетов
+        </h1>
 
+        <div class="hero__wrapper">
+          <p class="hero__description font-secondary">
+            Стеклопакет - главный в окне.
+            <br>
+            Он занимает 80% всего пространства окна, поэтому
+            <br>
+            в большей степени от него зависит тепло и тишина в доме
+          </p>
+
+          <div class="hero__info">
+            <div class="hero__advantage font-secondary">
+              <img src="img/layout/page/index/hero/info/1.png" alt="">
+              <h3>3300 кв.м</h3>
+              <span>
+                площадь
+                <br>
+                производства
+              </span>
+            </div>
+            <!-- /.hero__advantage -->
+
+            <div class="hero__advantage font-secondary">
+              <img src="img/layout/page/index/hero/info/2.png" alt="">
+              <h3>с 1996 г.</h3>
+              <span>
+                работаем
+                <br>
+                со стеклом
+              </span>
+            </div>
+            <!-- /.hero__advantage -->
+
+            <div class="hero__advantage font-secondary">
+              <img src="img/layout/page/index/hero/info/3.png" alt="">
+              <h3>до 1200</h3>
+              <span>
+                стеклопакетов
+                <br>
+                производим в день
+              </span>
+            </div>
+            <!-- /.hero__advantage -->
+          </div>
+          <!-- /.hero__info -->
+        </div>
+        <!-- /.hero__wrapper -->
+
+        <picture class="hero__picture">
+          <img src="img/layout/page/index/hero/picture.png" alt="">
+        </picture>
+
+        <div class="hero__action">
+          <button class="button button-primary">Выбрать стеклопакет</button>
+        </div>
+        <!-- /.hero__action -->
+      </div>
+      <!-- /.hero -->
+    </div>
+    <!-- /.container -->
+  </section>
 </main>
 
 @@include('layout/partials/footer.html')
