--- a/src/scss/abstracts/variables/_color.scss
+++ b/src/scss/abstracts/variables/_color.scss
@@ -1,6 +1,7 @@
 // Цветовая палитра блоков
 $palette-white: #ffffff;
-$palette-lightgray: #d9d9d9;
+$palette-lightgray: #e5eef2;
+$palette-gray: #d9d9d9;
 $palette-lightblue: #c1d1d9;
 $palette-blue: #07628f;
 $palette-darkblue: #074766;
