feat: полезные статьи

--- a/src/scss/layout/page/index/_about.scss
+++ b/src/scss/layout/page/index/_about.scss
@@ -2,7 +2,7 @@
   position: relative;
   overflow: hidden;
 
-  padding: 205px 0 205px;
+  padding: 205px 0;
   background: linear-gradient(
     180deg,
     #07628f 3%,
