--- a/src/scss/layout/page/index/_hero.scss
+++ b/src/scss/layout/page/index/_hero.scss
@@ -3,6 +3,7 @@
 // -----------------------------------------------------------------------------
 
 #hero {
+  margin-bottom: 0;
   padding-bottom: 80px;
 
   background-image: url("../img/layout/page/index/hero/background.jpg");
