--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -100,6 +100,58 @@
     <!-- /.container -->
   </section>
 
+  <section id="article-block" class="section">
+    <div class="container">
+      <div class="section__header">
+        <h2 class="section__title text-center">
+          Полезные статьи
+        </h2>
+      </div>
+      <!-- /.section__header -->
+
+      <div class="article-block">
+        <div class="row">
+          <div class="col-4">
+            @@include('layout/template/card/article.html',
+            {
+            "image": "img/layout/template/card/article/1.jpg",
+            "title": "Чем отличается стекло <br> от стеклопакета?",
+            "text": "Стеклопакет – это светопрозрачная конструкция, в которой между стеклянными листами, по принципу слоеного пирога, находится пустое пространство – камера..."
+            })
+          </div>
+          <!-- /.col-4 -->
+
+          <div class="col-4">
+            @@include('layout/template/card/article.html',
+            {
+            "image": "img/layout/template/card/article/2.jpg",
+            "title": "Триплекс стекло - что это?",
+            "text": "Стеклопакет – это светопрозрачная конструкция, в которой между стеклянными листами, по принципу слоеного пирога, находится пустое пространство – камера..."
+            })
+          </div>
+          <!-- /.col-4 -->
+
+          <div class="col-4">
+            @@include('layout/template/card/article.html',
+            {
+            "image": "img/layout/template/card/article/3.jpg",
+            "title": "Расшифровка формул <br> стеклопакетов",
+            "text": "Стеклопакет – это светопрозрачная конструкция, в которой между стеклянными листами, по принципу слоеного пирога, находится пустое пространство – камера..."
+            })
+          </div>
+          <!-- /.col-4 -->
+        </div>
+        <!-- /.row -->
+
+        <a href="" class="article-block__link">
+          <img src="img/layout/page/index/article-block/ellipse.svg" alt="">
+        </a>
+      </div>
+      <!-- /.article-block -->
+    </div>
+    <!-- /.container -->
+  </section>
+
   <section id="seo" class="section">
     <div class="container">
       <div class="seo">
