feat: верстка "галерея"

--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -100,6 +100,52 @@
     <!-- /.container -->
   </section>
 
+  <section id="gallery" class="section">
+    <div class="gallery">
+      <div class="swiper">
+        <div class="swiper-wrapper gallery__grid">
+          <div class="swiper-slide">
+            <picture class="gallery__picture lazy">
+              <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/page/index/gallery/1.jpg" alt="">
+            </picture>
+          </div>
+          <!-- /.swiper-slide -->
+
+          <div class="swiper-slide">
+            <picture class="gallery__picture lazy">
+              <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/page/index/gallery/2.jpg" alt="">
+            </picture>
+          </div>
+          <!-- /.swiper-slide -->
+
+          <div class="swiper-slide">
+            <picture class="gallery__picture lazy">
+              <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/page/index/gallery/3.jpg" alt="">
+            </picture>
+          </div>
+          <!-- /.swiper-slide -->
+
+          <div class="swiper-slide">
+            <picture class="gallery__picture lazy">
+              <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/page/index/gallery/4.jpg" alt="">
+            </picture>
+          </div>
+          <!-- /.swiper-slide -->
+
+          <div class="swiper-slide">
+            <picture class="gallery__picture lazy">
+              <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/page/index/gallery/5.jpg" alt="">
+            </picture>
+          </div>
+          <!-- /.swiper-slide -->
+        </div>
+        <!-- /.swiper-wrapper -->
+      </div>
+      <!-- /.swiper -->
+    </div>
+    <!-- /.gallery -->
+  </section>
+
   <section id="article-block" class="section">
     <div class="container">
       <div class="section__header">
