--- a/src/layout/partials/footer.html
+++ b/src/layout/partials/footer.html
@@ -12,6 +12,7 @@
 <!-- build:js js/script.min.js -->
 <script src="scripts/libraries/lazyload.js"></script>
 <script src="scripts/libraries/forms.js"></script>
+<script src="scripts/libraries/swiper.min.js"></script>
 
 <script src="scripts/base.js"></script>
 <script src="scripts/init.js"></script>
