--- a/src/layout/partials/header.html
+++ b/src/layout/partials/header.html
@@ -7,7 +7,7 @@
   <!-- Шапка -->
   <header id="header" class="header">
     <div class="header__content">
-      <div class="container">
+      <div class="container container--wide">
         <div class="header__wrapper">
           <div class="header__burger d-block d-lg-none">
             <button class="hamburger hamburger--squeeze" type="button">
@@ -72,7 +72,7 @@
     <!-- /.header__content -->
 
     <div class="header__nav d-none d-lg-block">
-      <div class="container">
+      <div class="container container--wide">
         <nav class="nav nav--header">
           <ul class="nav__list">
             <li class="nav__item">
