feat: верстка футера

--- a/src/scss/abstracts/variables/_color.scss
+++ b/src/scss/abstracts/variables/_color.scss
@@ -13,3 +13,4 @@ $color-text__black: #000000;
 $color-text__darkgray: #333333;
 $color-text__white: #ffffff;
 $color-text__blue: #07628f;
+$color-text__gold: #eeac03;
