--- a/src/scss/layout/common/_header.scss
+++ b/src/scss/layout/common/_header.scss
@@ -64,7 +64,7 @@
     align-items: flex-start;
 
     & > * {
-      display: flex;
+      display: inline-flex;
       align-items: center;
 
       font-size: $font-size__text--small;
