feat: верстка "производство"

--- a/src/layout/partials/footer.html
+++ b/src/layout/partials/footer.html
@@ -2,7 +2,7 @@
 <footer id="footer">
   <div class="footer">
     <div class="footer__content">
-      <div class="container">
+      <div class="container container--wide">
         <div class="footer__logo">
           <a href="">
             <img src="img/logo--footer.svg" alt="">
@@ -47,7 +47,7 @@
           </div>
           <!-- /.col-5 -->
 
-          <div class="col-7">
+          <div class="offset-1 col-6">
             <div class="footer__callback">
               <div class="footer__heading">По вопросам сотрудничества:</div>
 
@@ -96,7 +96,7 @@
     <!-- /.footer__content -->
 
     <div class="footer__info">
-      <div class="container">
+      <div class="container container--wide">
         <div class="footer__about">
           <div class="footer__copyright">
             Официальный сайт компании ФабрикантЪ Стеклопакеты.
@@ -122,9 +122,11 @@
 <script src="scripts/libraries/lazyload.js"></script>
 <script src="scripts/libraries/forms.js"></script>
 <script src="scripts/libraries/swiper.min.js"></script>
+<script src="scripts/libraries/fslightbox.js"></script>
 
 <script src="scripts/base.js"></script>
 <script src="scripts/init.js"></script>
+<script src="scripts/header.js"></script>
 <!-- endbuild -->
 </body>
 
