--- a/src/scss/abstracts/variables/_color.scss
+++ b/src/scss/abstracts/variables/_color.scss
@@ -10,6 +10,7 @@ $palette-black: #000000;
 // Цветовая палитра текста
 $color-text__primary: #000000;
 $color-text__black: #000000;
+$color-text__gray: #8e9496;
 $color-text__darkgray: #333333;
 $color-text__white: #ffffff;
 $color-text__blue: #07628f;
