--- a/src/scss/layout/page/_main.scss
+++ b/src/scss/layout/page/_main.scss
@@ -3,6 +3,8 @@
 @import "index/hero";
 @import "index/about";
 @import "index/seo";
+@import "index/manufacturing";
+@import "index/warranty";
 @import "index/article-block";
 @import "index/gallery";
 @import "index/catalog";
